Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone-deployment
  labels:
    app: netflix-clone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: k8s-demo
        image: akrawal/netflix
        imagePullPolicy: IfNotPresent
        ports:
        - name: node-port
          containerPort: 80
