Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - port: 31001
    nodePort: 31009
    targetPort: 80
    protocol: TCP
  selector:
    app: helloworld
  type: NodePort
